--- a/biblioteca/static/styling/scss/cart.scss
+++ b/biblioteca/static/styling/scss/cart.scss
@@ -1,6 +1,6 @@
 .viewCartContent {
     @extend .viewUsersContent;
-    max-width: 900px;
+    max-width: 700px;
     margin: 10% auto;
     form {
         align-self: center;
@@ -24,8 +24,14 @@
                 font-family: $bold;
             }
         }
-        td:last-of-type{
-            align-items: flex-end;
+        td {
+            &:first-of-type {
+                width: 50px;
+            }
+            &:last-of-type{
+                width: 50px;
+                align-items: flex-end;
+            }
         }
     }
     img {
@@ -36,7 +42,7 @@
     }
     .totalItems {
         @extend %text;
-        margin: 60px 50px 0;
+        margin: 50px 50px 0;
         font-size: 28px;
         line-height: 32px;
     }
